--- a/index.html
+++ b/index.html
@@ -6,29 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spelljammer Party Tracker Login/ Create Account Page</title>
     <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <form action="POST" method="POST" class="form" id="login">
+        <form action="POST" method="POST" class="form--hidden" id="login">
             <h1 class="form__title">Login</h1>
-            <div class="form__message form__message--error">Incorrect username/ password combination. Please try again.</div>
+            <div class="form__message form__message--error"></div>
             <div class="form__input-group">
                 <input type="text" class="form__input" autofocus placeholder="Username or email">
-                <div class="form__input-error-message">No matching Username or email found.</div>
+                <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
                 <input type="password" class="form__input" autofocus placeholder="Password">
-                <div class="form__input-error-message">Incorrect password.</div>
+                <div class="form__input-error-message"></div>
             </div>
             <button class="form__button" type="submit">Continue</button>
             <p class="form__text">
-                <a  class="form__link" href="./resetPassword.html" id="resetPassword">Forgot password?</a>
+                <a  class="form__link" 
+                href="#" 
+                id="resetPassword">Reset Password</a>
             </p>
             <p class="form__text">
-                <a class="form__link" href="./createAccount" id="createAccount">Create account here!</a>
+                <a class="form__link" 
+                href="#" 
+                id="linkCreateAccount">Create account here!</a>
+            </p>
+        </form>
+        <form action="POST" method="POST" class="form" id="createAccount">
+            <h1 class="form__title">Create Account</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Username">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Email Address">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Confirm Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="submit">Continue</button>
+            <p class="form__text">
+                <a class="form__link" 
+                href="#" 
+                id="linkLogin">Login</a>
             </p>
         </form>
     </div>
+
     <script src="./login.js"></script>
 </body>
 </html>
